# LR8

Task_1/: CMakeLists.txt  addition.cpp  binary.cpp  change.cpp  header.h  input.cpp  inputsCheck.cpp  main.cpp  options.cpp  output.cpp  removal.cpp  search.cpp  sort.cpp  view.cpp
Task_2/: CMakeLists.txt  addition.cpp  change.cpp  header.h  input.cpp  inputsCheck.cpp  main.cpp  options.cpp  output.cpp  removal.cpp  sort.cpp  text.cpp  view.cpp
